# SoccerSmartBet

./: .env.example  .gitignore  BATCH_1_AND_2_SUMMARY.md  BATCH_PLAN.md  CLAUDE.md  ORCHESTRATION_STATE.md  PRE_GAMBLING_FLOW_DISCUSSION.md  PRE_GAMBLING_OPTIMIZED_FLOW_TASKS.md  README.md  agents.md  check.md  docker-compose.yml  pyproject.toml  run_web_tester.py
.claude/agents/: football-data-researcher.md  infra.md  node-builder.md  tool-builder.md
.factory/droids/: football-research-droid.md  infra-droid.md  langgraph-architect-droid.md  node-builder-droid.md  tool-builder-droid.md
config/: .env.example  .gitignore  README.md  config.yaml
db/: schema.sql
db/init/: 002_seed_test_data.sql
db/seeds/: teams_seed.py
deployment/: DEPLOYMENT_INSTRUCTIONS.md  docker-compose.yml
deployment/db/init/: 001_create_schema.sql
deployment/db/migrations/: 001_rename_odds_columns.sql  002_move_team_news.sql  003_seed_teams.py  004_expert_game_reports.sql
docs/: db_schema.md
docs/research/: apifootball_alternatives_report.md  data_sources_original.md
docs/research/data_sources/: README.md  executive_summary.md  fixtures.md  h2h.md  injuries.md  odds.md  tasks.md  team_news.md  weather.md
docs/setup/: langsmith_setup.md
docs/setup/langsmith/: .env.example  README.md
docs/system_revive/: PLAN.md  progress.md  task_breakdown.md  ui_bugs.md  wave8_contract.md
external_projects/: LangGraphWrappers.md  StocksMarketRecommender.md
scripts/: test_gambling_ui.py  verify_langsmith.py
src/soccersmartbet/: daily_runs.py  db.py  team_registry.py
src/soccersmartbet/data/: teams_registry.json
src/soccersmartbet/gambling_flow/: ai_betting_agent.py  bet_verifier.py  graph_manager.py  handlers.py  notify_result.py  state.py
src/web_app/: __init__.py  main.py
status/pre_gambling_flow/: BATCH_PLAN.md  DETAILED_TASK_BREAKDOWN.md  ORCHESTRATION_STATE.md  PRE_GAMBLING_FLOW_TASKS.md  PRE_GAMBLING_OPTIMIZED_FLOW_TASKS.md
tests/: __init__.py  conftest.py  simple_test.py  test_pre_gambling_scheduler.py  test_trigger.py
tests/api_integration/: README.md  __init__.py  test_apifootball.py  test_football_data_org.py  test_odds_api.py  test_open_meteo.py
tests/system/: __init__.py  test_langsmith_integration.py  test_pre_gambling_scheduler.py
tests/unit/: __init__.py
tests/web/: __init__.py  run_web_tester.py
tests/webapp/: test_filter_values.py  test_live.py  test_team_stats.py
web_tool_tester/: main.py
(+134 files in other folders)
