[project]
name = "soccersmartbet"
version = "0.1.0"
description = "AI-assisted soccer betting analysis system"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "langsmith>=0.1.0",
    "playwright>=1.40.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soccersmartbet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
