[project]
name = "soccersmartbet"
version = "0.1.0"
description = "AI-assisted soccer betting analysis system"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=0.1.0",
    "langgraph>=1.0.0",
    "langsmith>=0.1.0",
    "lxml>=6.0.2",
    "requests>=2.31.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.0.0",
    "langchain-openai>=1.1.12",
    "psycopg2-binary>=2.9.11",
    "python-telegram-bot>=22.7",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
db = [
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soccersmartbet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "integration: marks tests as integration tests that call real external APIs",
]
